cd-pipelines/flask-blog-cd/ingress.yaml
#managed by opeomotayo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-blog-ingress
  namespace: blog-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - blog-app.opeomotayo.net
    secretName: flask-blog-production-certificate
  rules:
  - host: blog-app.opeomotayo.net
    http:
      paths:
      - backend:
          service:
            name: flask-blog
            port:
              number: 5000
        path: /
        pathType: Prefix
